--- a/src/AI_Screencap/packages.config
+++ b/src/AI_Screencap/packages.config
@@ -7,6 +7,7 @@
   <package id="IllusionLibs.AIGirl.Unity.Postprocessing.Runtime" version="2018.2.21.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.AIGirl.UnityEngine.AssetBundleModule" version="2018.2.21.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.AIGirl.UnityEngine.CoreModule" version="2018.2.21.4" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.AIGirl.UnityEngine.IMGUIModule" version="2018.2.21.4" targetFramework="net46" />
   <package id="IllusionLibs.AIGirl.UnityEngine.ScreenCaptureModule" version="2018.2.21.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.BepInEx" version="5.4.8" targetFramework="net46" />
   <package id="IllusionLibs.BepInEx.Harmony" version="2.3.2" targetFramework="net46" />
