--- a/src/KKS_ExtensibleSaveFormat/packages.config
+++ b/src/KKS_ExtensibleSaveFormat/packages.config
@@ -5,4 +5,6 @@
   <package id="IllusionLibs.KoikatsuSunshine.Assembly-CSharp" version="2021.5.28" targetFramework="net46" />
   <package id="IllusionLibs.KoikatsuSunshine.Assembly-CSharp-firstpass" version="2021.5.28" targetFramework="net46" />
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.CoreModule" version="2019.4.9" targetFramework="net46" />
+  <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.IMGUIModule" version="2019.4.9" targetFramework="net46" />
+  <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.InputLegacyModule" version="2019.4.9" targetFramework="net46" />
 </packages>
