--- a/src/KKS_Screencap/packages.config
+++ b/src/KKS_Screencap/packages.config
@@ -9,6 +9,7 @@
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.CoreModule" version="2019.4.9" targetFramework="net46" />
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.ImageConversionModule" version="2019.4.9" targetFramework="net46" />
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.IMGUIModule" version="2019.4.9" targetFramework="net46" />
+  <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.InputLegacyModule" version="2019.4.9" targetFramework="net46" />
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.ScreenCaptureModule" version="2019.4.9" targetFramework="net46" />
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.TextRenderingModule" version="2019.4.9" targetFramework="net46" />
 </packages>
