--- a/src/AI_InputUnlocker/packages.config
+++ b/src/AI_InputUnlocker/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="BepInEx.Analyzers" version="1.0.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.AIGirl.UnityEngine.CoreModule" version="2018.2.21.4" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.AIGirl.UnityEngine.IMGUIModule" version="2018.2.21.4" targetFramework="net46" />
   <package id="IllusionLibs.AIGirl.UnityEngine.UI" version="2018.2.21.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.BepInEx" version="5.4.8" targetFramework="net46" />
   <package id="IllusionLibs.BepInEx.Harmony" version="2.3.2" targetFramework="net46" />
