--- a/src/AI_Sideloader/packages.config
+++ b/src/AI_Sideloader/packages.config
@@ -7,6 +7,7 @@
   <package id="IllusionLibs.AIGirl.UnityEngine.AudioModule" version="2018.2.21.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.AIGirl.UnityEngine.CoreModule" version="2018.2.21.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.AIGirl.UnityEngine.ImageConversionModule" version="2018.2.21.4" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.AIGirl.UnityEngine.IMGUIModule" version="2018.2.21.4" targetFramework="net46" />
   <package id="IllusionLibs.BepInEx" version="5.4.8" targetFramework="net46" />
   <package id="IllusionLibs.BepInEx.Harmony" version="2.3.2" targetFramework="net46" />
   <package id="Microsoft.Unity.Analyzers" version="1.9.0" targetFramework="net46" developmentDependency="true" />
