--- a/src/AI_SliderUnlocker/packages.config
+++ b/src/AI_SliderUnlocker/packages.config
@@ -4,6 +4,7 @@
   <package id="IllusionLibs.AIGirl.Assembly-CSharp" version="2020.5.29.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.AIGirl.UniRx" version="2020.5.29.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.AIGirl.UnityEngine.CoreModule" version="2018.2.21.4" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.AIGirl.UnityEngine.IMGUIModule" version="2018.2.21.4" targetFramework="net46" />
   <package id="IllusionLibs.AIGirl.UnityEngine.UI" version="2018.2.21.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.BepInEx" version="5.4.8" targetFramework="net46" />
   <package id="IllusionLibs.BepInEx.Harmony" version="2.3.2" targetFramework="net46" />
