--- a/src/EC_ColorCorrector/packages.config
+++ b/src/EC_ColorCorrector/packages.config
@@ -5,5 +5,6 @@
   <package id="IllusionLibs.EmotionCreators.Assembly-CSharp" version="2019.6.6.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.EmotionCreators.Assembly-CSharp-firstpass" version="2019.6.6.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.EmotionCreators.UnityEngine.CoreModule" version="2017.4.24.4" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.EmotionCreators.UnityEngine.IMGUIModule" version="2017.4.24.4" targetFramework="net46" />
   <package id="Microsoft.Unity.Analyzers" version="1.9.0" targetFramework="net46" developmentDependency="true" />
 </packages>
