--- a/src/EC_Sideloader/packages.config
+++ b/src/EC_Sideloader/packages.config
@@ -8,6 +8,7 @@
   <package id="IllusionLibs.EmotionCreators.Assembly-CSharp-firstpass" version="2019.6.6.4" targetFramework="net46" />
   <package id="IllusionLibs.EmotionCreators.IL" version="2019.6.6.4" targetFramework="net46" />
   <package id="IllusionLibs.EmotionCreators.UnityEngine.CoreModule" version="2017.4.24.4" targetFramework="net46" />
+  <package id="IllusionLibs.EmotionCreators.UnityEngine.IMGUIModule" version="2017.4.24.4" targetFramework="net46" />
   <package id="IllusionLibs.EmotionCreators.UnityEngine.UnityWebRequestWWWModule" version="2017.4.24.4" targetFramework="net46" developmentDependency="true" />
   <package id="Microsoft.Unity.Analyzers" version="1.9.0" targetFramework="net46" developmentDependency="true" />
   <package id="SharpZipLib" version="1.3.2" targetFramework="net46" />
