--- a/src/HS2_ExtensibleSaveFormat/packages.config
+++ b/src/HS2_ExtensibleSaveFormat/packages.config
@@ -3,9 +3,11 @@
   <package id="BepInEx.Analyzers" version="1.0.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.BepInEx" version="5.4.8" targetFramework="net46" />
   <package id="IllusionLibs.BepInEx.Harmony" version="2.3.2" targetFramework="net46" />
+  <package id="IllusionLibs.EmotionCreators.UnityEngine.IMGUIModule" version="2017.4.24.4" targetFramework="net46" />
   <package id="IllusionLibs.HoneySelect2.Assembly-CSharp" version="2020.5.29.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.HoneySelect2.Assembly-CSharp-firstpass" version="2020.5.29.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.HoneySelect2.Sirenix.Serialization" version="2020.5.29.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.HoneySelect2.UnityEngine.CoreModule" version="2018.4.11.4" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.HoneySelect2.UnityEngine.IMGUIModule" version="2018.4.11.4" targetFramework="net46" />
   <package id="Microsoft.Unity.Analyzers" version="1.9.0" targetFramework="net46" developmentDependency="true" />
 </packages>
