--- a/src/HS2_Sideloader/packages.config
+++ b/src/HS2_Sideloader/packages.config
@@ -10,6 +10,7 @@
   <package id="IllusionLibs.HoneySelect2.UnityEngine.AudioModule" version="2018.4.11.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.HoneySelect2.UnityEngine.CoreModule" version="2018.4.11.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.HoneySelect2.UnityEngine.ImageConversionModule" version="2018.4.11.4" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.HoneySelect2.UnityEngine.IMGUIModule" version="2018.4.11.4" targetFramework="net46" />
   <package id="Microsoft.Unity.Analyzers" version="1.9.0" targetFramework="net46" developmentDependency="true" />
   <package id="SharpZipLib" version="1.3.2" targetFramework="net46" />
   <package id="XUnity.Common" version="1.0.0" targetFramework="net46" />
