--- a/src/HS_ConfigurationManager/packages.config
+++ b/src/HS_ConfigurationManager/packages.config
@@ -4,6 +4,7 @@
   <package id="BepInEx.ConfigurationManager" version="16.3.0" targetFramework="net35" developmentDependency="true" />
   <package id="IllusionLibs.BepInEx" version="5.4.8" targetFramework="net35" />
   <package id="IllusionLibs.BepInEx.Harmony" version="2.3.2" targetFramework="net35" />
+  <package id="IllusionLibs.EmotionCreators.UnityEngine.IMGUIModule" version="2017.4.24.4" targetFramework="net35" />
   <package id="IllusionLibs.HoneySelect.Assembly-CSharp" version="2017.6.30.2" targetFramework="net35" developmentDependency="true" />
   <package id="IllusionLibs.HoneySelect.UnityEngine" version="5.3.5.2" targetFramework="net35" developmentDependency="true" />
   <package id="IllusionLibs.HoneySelect.UnityEngine.UI" version="5.3.5.2" targetFramework="net35" developmentDependency="true" />
