--- a/src/KKS_BGMLoader/packages.config
+++ b/src/KKS_BGMLoader/packages.config
@@ -7,6 +7,8 @@
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.AssetBundleModule" version="2019.4.9" targetFramework="net46" />
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.AudioModule" version="2019.4.9" targetFramework="net46" />
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.CoreModule" version="2019.4.9" targetFramework="net46" />
+  <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.IMGUIModule" version="2019.4.9" targetFramework="net46" />
+  <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.InputLegacyModule" version="2019.4.9" targetFramework="net46" />
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.UnityWebRequestWWWModule" version="2019.4.9" targetFramework="net46" />
   <package id="IllusionLibs.XUnity.ResourceRedirector" version="4.16.0" targetFramework="net46" />
   <package id="Microsoft.Unity.Analyzers" version="1.10.2" targetFramework="net46" developmentDependency="true" />
