--- a/src/KKS_ColorCorrector/packages.config
+++ b/src/KKS_ColorCorrector/packages.config
@@ -6,5 +6,7 @@
   <package id="IllusionLibs.KoikatsuSunshine.Assembly-CSharp" version="2021.5.28" targetFramework="net46" />
   <package id="IllusionLibs.KoikatsuSunshine.Assembly-CSharp-firstpass" version="2021.5.28" targetFramework="net46" />
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.CoreModule" version="2019.4.9" targetFramework="net46" />
+  <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.IMGUIModule" version="2019.4.9" targetFramework="net46" />
+  <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.InputLegacyModule" version="2019.4.9" targetFramework="net46" />
   <package id="Microsoft.Unity.Analyzers" version="1.10.2" targetFramework="net46" developmentDependency="true" />
 </packages>
