--- a/src/KKS_Sideloader/packages.config
+++ b/src/KKS_Sideloader/packages.config
@@ -8,6 +8,8 @@
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.AssetBundleModule" version="2019.4.9" targetFramework="net46" />
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.CoreModule" version="2019.4.9" targetFramework="net46" />
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.ImageConversionModule" version="2019.4.9" targetFramework="net46" />
+  <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.IMGUIModule" version="2019.4.9" targetFramework="net46" />
+  <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.InputLegacyModule" version="2019.4.9" targetFramework="net46" />
   <package id="IllusionLibs.XUnity.ResourceRedirector" version="4.16.0" targetFramework="net46" />
   <package id="Microsoft.Unity.Analyzers" version="1.10.2" targetFramework="net46" developmentDependency="true" />
   <package id="SharpZipLib" version="1.3.2" targetFramework="net46" />
